@@ -13,6 +13,6 @@ Description: Sweave-based automatic generation of exams including multiple-choic
 	PDF, HTML, Moodle XML, QTI 1.2 (for OLAT/OpenOLAT), QTI 2.1.
 Depends: R (>= 2.15.0)
 Imports: stats, graphics, tools, utils
-Suggests: base64enc, knitr, RCurl, RJSONIO, rmarkdown, tth, XML
+Suggests: base64enc, knitr, parallel, png, RCurl, RJSONIO, rmarkdown, tth, XML
 License: GPL-2 | GPL-3
 URL: http://exams.R-Forge.R-project.org/
