@@ -9,6 +9,16 @@ export(
   "string2mchoice",
   "mchoice2text",
   "answerlist",
+  "round2",
+  "fmt",
+  "char_with_braces",
+  "num_to_tol",
+
+  ## mchoice/schoice generators
+  "num_to_schoice",
+  "det_to_schoice",
+  "matrix_to_schoice",
+  "matrix_to_mchoice",
   
   ## version 2 extensible interface
   "xexams",
@@ -29,7 +39,7 @@ export(
   ## LaTeX to image converter (via ImageMagick's convert)
   "tex2image",
 
-  ## new modular PDF driver
+  ## modular PDF driver
   "exams2pdf",
   "make_exams_write_pdf",
 
@@ -56,6 +66,7 @@ export(
   ## mimicked WU exam server driver (NOPS)
   "exams2nops",
   "make_nops_template",
+  "nops_scan",
 
   ## Moodle driver
   "exams2moodle",
@@ -71,3 +82,4 @@ export(
 )
 
 S3method("print", "exams_metainfo")
+S3method("toLatex", "matrix")
